refactoring changes
SVN-Revision: 13941